--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -319,6 +319,8 @@
 
         <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.findUsages.LuaFindUsagesProvider" />
 
+       
+
         <lang.namesValidator language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.LuaNamesValidation" />
 
         <gotoSymbolContributor implementation="com.sylvanaar.idea.Lua.editor.LuaGotoSymbolContributor" />
@@ -336,9 +338,13 @@
         
         <sdkType implementation="com.sylvanaar.idea.Lua.sdk.LuaSdkType"/>
 
+
+        <!--Stubs-->
         <stubElementTypeHolder class="com.sylvanaar.idea.Lua.lang.parser.LuaElementTypes"/>
 
         <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaFullScriptNameIndex"/>
+
+        <java.shortNamesCache id="Lua" implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.LuaShortNamesCache" />
 
 
 
