--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -343,6 +343,7 @@
         <stubElementTypeHolder class="com.sylvanaar.idea.Lua.lang.parser.LuaElementTypes"/>
 
         <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaFullScriptNameIndex"/>
+        <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaGlobalDeclarationIndex" />
 
         <java.shortNamesCache id="Lua" implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.LuaShortNamesCache" />
 
